# modern_cpp_challenge

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
include/: Net.hpp  Range.hpp
src/: CMakeLists.txt
src/02_language/: CMakeLists.txt
src/02_language/problem_15/: CMakeLists.txt  main.cpp  readme.md
src/02_language/problem_16/: CMakeLists.txt  main.cpp  readme.md
src/12_networking/problem_95a/: main.cpp
src/language/: CMakeLists.txt
