file(GLOB SOURCES CONFIGURE_DEPENDS "*.cpp")

# add_subdirectory(math)
add_subdirectory(language)
# add_subdirectory(strings_regex)
# add_subdirectory(algorithms)
# add_subdirectory(archives_images_databases)
# add_subdirectory(concurrency)
# add_subdirectory(cryptography)
# add_subdirectory(date_time)
# add_subdirectory(design_patterns)
# add_subdirectory(streams_fs)
# add_subdirectory(serialization)
# add_subdirectory(networking)