file(GLOB SOURCES CONFIGURE_DEPENDS "*.cpp")

# add_subdirectory(01_math)
add_subdirectory(02_language)
# add_subdirectory(03_strings_regex)
# add_subdirectory(04_streams_fs)
# add_subdirectory(05_date_time)
# add_subdirectory(06_algorithms)
# add_subdirectory(07_concurrency)
# add_subdirectory(08_design_patterns)
# add_subdirectory(09_serialization)
# add_subdirectory(10_archives_images_databases)
# add_subdirectory(11_cryptography)
# add_subdirectory(12_networking)